<resources>
  <string name="app_name">OpenCvTest</string>
  <string name="action_settings">Settings</string>

  <string name="original">原图</string>
  <string name="reset">重置</string>
  <string name="smoothing_process">平滑处理</string>
  <string name="erode_dilate">腐蚀与膨胀</string>
  <string name="pyramids">图像金字塔</string>
  <string name="filter2d">自己的线性滤波</string>
  <string name="border">添加边界</string>
  <string name="canny">Canny</string>
  <string name="remapping">重映射</string>
  <string name="affine_transform">仿射变换</string>
  <string name="histogram">直方图</string>
  <string name="backproj">反向投影</string>

  <string name="homogeneous_blur">均值平滑</string>
  <string name="gaussian_blur">高斯平滑</string>
  <string name="median_blur">中值平滑</string>
  <string name="bilateral_blur">双边平滑</string>

  <string name="erode">腐蚀</string>
  <string name="dilate">膨胀</string>
  <string name="opening">开运算</string>
  <string name="closing">闭运算</string>
  <string name="morphological_gradient">形态梯度</string>
  <string name="top_hat">顶帽</string>
  <string name="black_hat">黑帽</string>

  <string name="pyramid_up">向上采样</string>
  <string name="pyramid_down">向下采样</string>
  <string name="threshold">阈值</string>

  <string name="border_constant">常数填充</string>
  <string name="border_replicate">复制填充</string>

  <string name="sobel">Sobel</string>
  <string name="laplace">Laplace</string>

  <string name="hough">霍夫</string>
  <string name="hough_line">统计概率霍夫线</string>
  <string name="hough_circle">霍夫圆变换</string>

  <string name="remapping_zoom">缩小</string>
  <string name="remapping_top_bottom_reverse">上下颠倒</string>
  <string name="remapping_left_right_reverse">左右颠倒</string>
  <string name="remapping_both_reverse">同时颠倒</string>

  <string name="warp_affine">仿射变换</string>
  <string name="rotate_matrix_2d">旋转</string>

  <string name="histogram_equalize">均衡化</string>
  <string name="histogram_calculate">直方图计算</string>

  <string name="backproj_calculate">反向投影计算</string>
</resources>
