<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <Button
        android:id="@+id/button_smoothing"
        android:text="@string/smoothing_process"
        android:gravity="center"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_erode_dilate"
        android:text="@string/erode_dilate"
        android:gravity="center"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_pyramid"
        android:text="@string/pyramids"
        android:gravity="center"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_filter2d"
        android:text="@string/filter2d"
        android:gravity="center"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_border"
        android:text="@string/border"
        android:gravity="center"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_sobel"
        android:text="@string/sobel"
        android:gravity="center"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_canny"
        android:text="@string/canny"
        android:gravity="center"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_hough"
        android:text="@string/hough"
        android:gravity="center"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_remapping"
        android:text="@string/remapping"
        android:gravity="center"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_affine_transform"
        android:text="@string/affine_transform"
        android:gravity="center"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_histogram"
        android:text="@string/histogram"
        android:gravity="center"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_backproj"
        android:text="@string/backproj"
        android:gravity="center"
        android:textSize="@dimen/button_text_size"
        android:layout_margin="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
  </LinearLayout>
</ScrollView>