<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <ImageView
      android:id="@+id/white_board"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
  />
  <HorizontalScrollView
      android:layout_alignParentBottom="true"
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
      <Button
          android:id="@+id/button_original"
          android:text="@string/original"
          android:textSize="@dimen/button_text_size"
          android:layout_width="@dimen/button_width"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/button_erode"
          android:text="@string/erode"
          android:textSize="@dimen/button_text_size"
          android:layout_width="@dimen/button_width"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/button_dilate"
          android:text="@string/dilate"
          android:textSize="@dimen/button_text_size"
          android:layout_width="@dimen/button_width"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/button_opening"
          android:text="@string/opening"
          android:textSize="@dimen/button_text_size"
          android:layout_width="@dimen/button_width"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/button_closing"
          android:text="@string/closing"
          android:textSize="@dimen/button_text_size"
          android:layout_width="@dimen/button_width"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/button_morphological_gradient"
          android:text="@string/morphological_gradient"
          android:textSize="@dimen/button_text_size"
          android:layout_width="@dimen/button_width"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/button_top_hat"
          android:text="@string/top_hat"
          android:textSize="@dimen/button_text_size"
          android:layout_width="@dimen/button_width"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/button_black_hat"
          android:text="@string/black_hat"
          android:textSize="@dimen/button_text_size"
          android:layout_width="@dimen/button_width"
          android:layout_height="wrap_content"/>
    </LinearLayout>
  </HorizontalScrollView>
</RelativeLayout>