<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <ImageView
      android:id="@+id/white_board"
      android:scaleType="center"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
  />
  <HorizontalScrollView
      android:id="@+id/bottom_layout"
      android:layout_alignParentBottom="true"
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
      <Button
          android:id="@+id/button_original"
          android:text="@string/reset"
          android:textSize="@dimen/button_text_size"
          android:layout_width="@dimen/button_width"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/button_pyramid_down"
          android:text="@string/pyramid_down"
          android:textSize="@dimen/button_text_size"
          android:layout_width="@dimen/button_width"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/button_pyramid_up"
          android:text="@string/pyramid_up"
          android:textSize="@dimen/button_text_size"
          android:layout_width="@dimen/button_width"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/button_threshold"
          android:text="@string/threshold"
          android:textSize="@dimen/button_text_size"
          android:layout_width="@dimen/button_width"
          android:layout_height="wrap_content"/>
    </LinearLayout>
  </HorizontalScrollView>
  <SeekBar
      android:id="@+id/seek_bar"
      android:layout_above="@+id/bottom_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:max="255"
      android:progress="40"
  />
</RelativeLayout>