<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <ImageView
      android:id="@+id/white_board"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
  />
  <LinearLayout
      android:layout_alignParentBottom="true"
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <Button
        android:id="@+id/button_original"
        android:text="@string/original"
        android:textSize="@dimen/button_text_size"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_warp_affine"
        android:text="@string/warp_affine"
        android:textSize="@dimen/button_text_size"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_rotate_matrix_2d"
        android:text="@string/rotate_matrix_2d"
        android:textSize="@dimen/button_text_size"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
  </LinearLayout>
</RelativeLayout>
